[FIX] web_enterprise: legacy many2one disabled field in dark mode
Before this commit, when a legacy many2one field is disabled the
background was forced to be white, which made it unreadable on dark
mode.

Steps to reproduce:
- Activate dark mode
- In Accounting, open the Bank Reconciliation
- Open the Manual Operations tab
- Disable the Partner field
=> light grey text on white background

closes odoo/enterprise#46274

--- a/web_enterprise/static/src/legacy/scss/fields.scss
+++ b/web_enterprise/static/src/legacy/scss/fields.scss
@@ -68,12 +68,6 @@
     }
 }
 
-.o_field_many2one {
-    input[type="text"]:disabled{
-        background-color:#FFF;
-    }
-}
-
 .ui-autocomplete .ui-menu-item {
     &.o_m2o_dropdown_option > a {
         color: $o-brand-primary;
